--- a/package.json
+++ b/package.json
@@ -1,25 +1,18 @@
 {
-  "scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build",
-    "test": "jest"
-  },
-  "devDependencies": {
-    "@snowpack/app-scripts-svelte": "^1.9.1",
-    "@snowpack/plugin-dotenv": "^2.0.4",
-    "@snowpack/plugin-run-script": "^2.1.7",
-    "@snowpack/plugin-svelte": "^3.1.0",
-    "@snowpack/plugin-typescript": "^1.0.2",
-    "@testing-library/jest-dom": "^5.5.0",
-    "@testing-library/svelte": "^3.0.0",
-    "@tsconfig/svelte": "^1.0.3",
-    "@types/jest": "^26.0.4",
-    "@types/snowpack-env": "^2.3.0",
-    "jest": "^26.2.2",
-    "snowpack": "^2.15.1",
-    "svelte": "^3.24.0",
-    "svelte-check": "^1.0.0",
-    "svelte-preprocess": "^4.0.8",
-    "typescript": "^4.0.0"
-  }
+	"name": "lifecrumbs",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "svelte dev",
+		"build": "svelte build"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-node": "0.0.12",
+		"@sveltejs/kit": "0.0.23",
+		"@sveltejs/snowpack-config": "0.0.4",
+		"svelte": "^3.29.0",
+		"typescript": "^4.0.0",
+		"tslib": "^2.0.0",
+		"svelte-preprocess": "^4.0.0",
+		"@snowpack/plugin-typescript": "^1.0.0"
+	}
 }
