--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-	"name": "lifecrumbs",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "svelte dev",
-		"build": "svelte build"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-node": "0.0.12",
-		"@sveltejs/kit": "0.0.23",
-		"@sveltejs/snowpack-config": "0.0.4",
-		"svelte": "^3.29.0",
-		"typescript": "^4.0.0",
-		"tslib": "^2.0.0",
-		"svelte-preprocess": "^4.0.0",
-		"@snowpack/plugin-typescript": "^1.0.0"
-	}
+  "name": "lifecrumbs",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "svelte dev",
+    "build": "svelte build"
+  },
+  "devDependencies": {
+    "@snowpack/plugin-typescript": "^1.0.0",
+    "@sveltejs/adapter-node": "0.0.12",
+    "@sveltejs/kit": "0.0.23",
+    "@sveltejs/snowpack-config": "0.0.4",
+    "autoprefixer": "^10.0.1",
+    "cssnano": "^4.1.10",
+    "postcss": "^8.1.4",
+    "postcss-load-config": "^3.0.0",
+    "svelte": "^3.29.0",
+    "svelte-preprocess": "^4.0.0",
+    "tailwindcss": "^1.9.6",
+    "tslib": "^2.0.0",
+    "typescript": "^4.0.0"
+  }
 }
