--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "baseUrl": "./",
     "paths": {
       "$components/*": ["src/components/*"],
+      "$features/*": ["src/features/*"],
       "$store/*": ["src/store/*"],
       "$types/*": ["src/types/*"]
     }
