--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "paths": {
       "$components/*": ["src/components/*"],
       "$features/*": ["src/features/*"],
+      "$services/*": ["src/services/*"],
       "$store/*": ["src/store/*"],
       "$types/*": ["src/types/*"]
     }
